Changed the chess board CSS to adapt to the screen size. Added in comments for what to do next in pieces.js.

--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,8 @@ body {
 }
 
 #outer-box {
-    height: 500px;
-    width: 500px;
+    height: 75%;
+    width: auto;
     margin: auto;
     border: 4px solid black;
 }
